Migration to Mongoose and update swagger
